Height overflow fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,7 +140,7 @@ section .container {
 
 .display-table-cell {
     display: table-cell;
-    vertical-align: middle;
+    /* vertical-align: middle; */
     position: relative;
    /*  z-index: 10; */
 }
@@ -270,7 +270,8 @@ g.Header {
 @media only screen and (min-width: 991px) {
     .home_type .side {
         min-height: 100%;
-        overflow: auto;
+        overflow-y: auto;
+        overflow-x: hidden;
     }
 }
 
@@ -290,6 +291,7 @@ g.Header {
 
 .typed-wrapper {
     width: 100%;
+    margin-top: 140px;
 }
 
 .typed-wrapper h1 {
@@ -306,13 +308,14 @@ g.Header {
     font-weight: 100;
 }
 .typed-wrapper h1 svg {
-    margin: 50px;
     width: 40%;
 }
 .home_type .more_info {
     display: inline-block;
     text-align: center;
     margin-top: 40px;
+    position: relative;
+    z-index: 9999;
 }
 
 .home_type .more_info a:hover {
@@ -333,8 +336,7 @@ g.Header {
 
 .home_type .more_info a {
     display: inline-block;
-    position: relative;
-    z-index: 9999;
+    
     padding: 8px 20px;
     border: 2px solid #fff;
     color: #fff;
@@ -451,7 +453,9 @@ g.Header {
     margin-top: 40px;
     box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.34),-1px 1px 1px rgba(0, 0, 0, 0.34);
 }
-
+.intro-content {
+    top: 300px;
+}
 .intro-content h1 {
     margin-top: 30px;
     margin-bottom: 20px;
